fix text-align

--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,4 @@
 body {
-    text-align: center;
 	background-color: #ffffff;
     color: #333333;
 	font-family: Verdana, Roboto, 'Droid Sans', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic ProN', sans-serif;
